--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-   
+
 <head>
     <meta charset="UTF-8">
     <title>Ana știe</title>
@@ -56,7 +56,7 @@
                 <div class="container-fluid text-center">
                     <div class="col-sm-12 col-xs-12">
                         <h3>BINE AI VENIT!</h3>
-                        <h5>Alege din meniu jocul preferat!</h5>
+                        <h5>Alege din meniu jocul preferat!</h5><br>
                         <div id="bear">
                             <div class="head">
                                 <div class="ears">
@@ -91,10 +91,50 @@
                             </div>
                         </div>
                     </div>
+        </header>
+        <section>
+            <h3><br>FILME EDUCAȚIONALE</h3>
+            <h5>Alege filmul preferat!</h5><br>
+            <div class="row text-center">
+                <div class="col-sm-3">
+                    <div class="thumbnail-1">
+                        <iframe src="https://www.youtube.com/embed/170zMxCUjNk" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <h4>Alfabetul</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="thumbnail-2">
+                        <iframe src="https://www.youtube.com/embed/cL-j9uH7Noc" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <h4>Cifrele</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="thumbnail-3">
+                        <iframe src="https://www.youtube.com/embed/ZkI8wqrMUxQ" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <h4>Culorile</h4>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="thumbnail-4">
+                        <iframe src="https://www.youtube.com/embed/SI0BPHQ1vWI" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <h4>Formele</h4>
+                    </div>
                 </div>
             </div>
+        </section>
 
-        </header>
+        </div>
+        </div>
+
+
 
     </body>
 
