--- a/colors.html
+++ b/colors.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <h1>Descoperă</h1>
-    <h2>culorile identice!</h2>
+    <h1>Descoperă butoanele</h1>
+    <h2>de aceeași culoare!</h2>
     <div class="envelope">
         <div class="table">
             <div class="field" id="1">
