--- a/learn.html
+++ b/learn.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Invata repede</title>
+    <title>Învață repede</title>
     <meta name="Learn quickly letters, numbers and colors"
         content="Help your child to learn letters, numbers and colors" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
