--- a/puzzle.html
+++ b/puzzle.html
@@ -14,7 +14,7 @@
 <body>
     <header>
 
-        <h3>Aranjează cifrele în ordine crescătoare!</h3>
+        <h1>Aranjează cifrele<br>în ordine crescătoare!</h1>
     </header>
     <section class="panel">
     </section>
