--- a/tictactoe.html
+++ b/tictactoe.html
@@ -37,7 +37,8 @@
 <div class="menu">
     <div class="menu-bg"></div>
     <div class="table">
-        <h1>Alege litera!</h1>
+        <h1>X și O<br>
+            Alege X sau O!</h1>
         <button class="btn">X</button>
         <button class="btn">O</button>
     </div>
