--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#myPage"><strong>
-                            ANA ȘTIE!</strong></a>
+                    <a class="navbar-brand" href="#myPage">
+                        <strong>ANA ȘTIE!</strong></a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="myNavbar">
