--- a/index.html
+++ b/index.html
@@ -55,41 +55,42 @@
             <div class="jumbotron text-center">
                 <div class="container-fluid text-center">
                     <div class="col-sm-12 col-xs-12">
-                        <h3>BINE AI VENIT!</h3>
-                        <h5>Alege din meniu jocul preferat!</h5><br>
-                        <div id="bear">
-                            <div class="head">
-                                <div class="ears">
-                                    <div class="ear ear-left"></div>
-                                    <div class="ear ear-right"></div>
-                                </div>
-                                <div class="eyes">
-                                    <div class="eye eye-left">
-                                        <div class="eyeball"></div>
+                        <h1 style="font-size: 35px; color:red; text-shadow: .9px .9px .9px black;">
+                            Salut Ana!</h2>
+                            <h5>Alege din meniu jocul preferat!</h5><br>
+                            <div id="bear">
+                                <div class="head">
+                                    <div class="ears">
+                                        <div class="ear ear-left"></div>
+                                        <div class="ear ear-right"></div>
                                     </div>
-                                    <div class="eye eye-right">
-                                        <div class="eyeball"></div>
+                                    <div class="eyes">
+                                        <div class="eye eye-left">
+                                            <div class="eyeball"></div>
+                                        </div>
+                                        <div class="eye eye-right">
+                                            <div class="eyeball"></div>
+                                        </div>
                                     </div>
+                                    <div class="muzzle">
+                                        <div class="nose"></div>
+                                        <div class="mouth"></div>
+                                    </div>
+                                    <div class="head-bg"></div>
                                 </div>
-                                <div class="muzzle">
-                                    <div class="nose"></div>
-                                    <div class="mouth"></div>
-                                </div>
-                                <div class="head-bg"></div>
-                            </div>
-                            <div class="body">
-                                <div class="hands">
-                                    <div class="hand-left"></div>
-                                    <div class="hand-right"></div>
-                                </div>
-                                <div class="legs">
-                                    <div class="leg-left"></div>
-                                    <div class="leg-right"></div>
-                                </div>
-                                <div class="abdomen"></div>
+                                <div class="body">
+                                    <div class="hands">
+                                        <div class="hand-left"></div>
+                                        <div class="hand-right"></div>
+                                    </div>
+                                    <div class="legs">
+                                        <div class="leg-left"></div>
+                                        <div class="leg-right"></div>
+                                    </div>
+                                    <div class="abdomen"></div>
 
+                                </div>
                             </div>
-                        </div>
                     </div>
         </header>
         <section>
