Delete some files

--- a/coloring.html
+++ b/coloring.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pagini de colorat</title>
+    <title>Coloring pages</title>
     <meta name="Coloring pages" content="drawing, coloring" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
     <link rel="stylesheet" href="css/coloring.css">
@@ -15,10 +15,9 @@
 
 <body>
     <form>
-        <label>Pagini de colorat<br>Selecteaza imaginea:
+        <label>Coloring pages<br>Select an image:
             <select id="images">
-                <option>Selectează:
-                <option value="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316753/b.svg">Landscape
+                <option>Choose!
                 <option value="https://s3-us-west-2.amazonaws.com/s.cdpn.io/183091/harper-coloring-book003.svg">Bird
                 <option value="https://s3-us-west-2.amazonaws.com/s.cdpn.io/183091/harper-coloring-book006.svg">Insect
                 <option value="https://s3-us-west-2.amazonaws.com/s.cdpn.io/183091/harper-coloring-book007.svg">Animal
@@ -26,7 +25,7 @@
             </select>
         </label>
 
-        <label> <br> Selecteaza culoarea:&nbsp;
+        <label> <br> Select color:&nbsp;
             <input type="color" value="#ff1133" id="colors">
         </label>
     </form>
