--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ana știe</title>
-    <meta name="Ana knows" content="Ana knows" />
+    <title>Educational games</title>
+    <meta name="Educational games" content="Educational games" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
@@ -31,21 +31,19 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#myPage">
-                        <strong>ANA ȘTIE!</strong></a>
+                        <strong>EDUCATIONAL GAMES</strong></a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="./learn.html" target="_blank">
-                                Învățare</a></li>
+                                Learning</a></li>
                         <li><a href="./coloring.html" target="_blank">
-                                Creativitate</a></li>
+                                Creativity</a></li>
                         <li><a href="colors.html" target="_blank">
-                                Memorare</a></li>
-                        <li><a href="./tictactoe.html" target="_blank">
-                                Perspicacitate</a></li>
+                                Memory</a></li>
                         <li><a href="puzzle.html" target="_blank">
-                                Logică</a></li>
+                                Logic</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,8 +54,8 @@
                 <div class="container-fluid text-center">
                     <div class="col-sm-12 col-xs-12">
                         <h1 style="font-size: 35px; color:red; text-shadow: .9px .9px .9px black;">
-                            Salut Ana!</h2>
-                            <h5>Alege din meniu jocul preferat!</h5><br>
+                            WELCOME!</h2>
+                            <h5>Choose your favorite game from the menu!</h5><br>
                             <div id="bear">
                                 <div class="head">
                                     <div class="ears">
@@ -93,45 +91,6 @@
                             </div>
                     </div>
         </header>
-        <section>
-            <h3><br>FILME EDUCAȚIONALE</h3>
-            <h5>Alege filmul preferat!</h5><br>
-            <div class="row text-center">
-                <div class="col-sm-3">
-                    <div class="thumbnail-1">
-                        <iframe src="https://www.youtube.com/embed/170zMxCUjNk" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <h4>Alfabetul</h4>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="thumbnail-2">
-                        <iframe src="https://www.youtube.com/embed/cL-j9uH7Noc" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <h4>Cifrele</h4>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="thumbnail-3">
-                        <iframe src="https://www.youtube.com/embed/ZkI8wqrMUxQ" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <h4>Culorile</h4>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="thumbnail-4">
-                        <iframe src="https://www.youtube.com/embed/SI0BPHQ1vWI" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <h4>Formele</h4>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         </div>
         </div>
 
