--- a/learn.html
+++ b/learn.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Învață repede</title>
+    <title>Learn quick</title>
     <meta name="Learn quickly letters, numbers and colors"
         content="Help your child to learn letters, numbers and colors" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
@@ -12,17 +12,18 @@
 </head>
 
 <body>
-    <h1 id="name"></h1>
-    <h2>Click pe butoane apoi citește cu voce tare ceea ce vezi!</h2>
+    <h1>Learn quickly!</h1>
+    <h2 id="name"></h2>
+    <h3>Click on the buttons then read aloud what you see!</h3>
     <div class="buttons">
         <div class="button-frame">
-            <button id="button1">Litera<br><span id="letter"></span></button>
+            <button id="button1">Letter<br><span id="letter"></span></button>
         </div>
         <div class="button-frame">
-            <button id="button2">Cifra<br><span id="number"></span></button>
+            <button id="button2">Number<br><span id="number"></span></button>
         </div>
         <div class="button-frame">
-            <button id="button3">Culoarea<br></button>
+            <button id="button3">Color<br></button>
         </div>
     </div>
 
