--- a/puzzle.html
+++ b/puzzle.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Puzzle cifre</title>
+    <title>Puzzle</title>
     <meta name="Puzzle" content="Puzzle with numbers" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
     <link rel="stylesheet" href="css/puzzle.css">
@@ -14,7 +14,7 @@
 <body>
     <header>
 
-        <h1>Aranjează cifrele<br>în ordine crescătoare!</h1>
+        <h1>Arrange the numbers<br>in ascending order!</h1>
     </header>
     <section class="panel">
     </section>
