--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Descopera culorile identice</title>
+    <title>Discover the colors</title>
     <meta charset="UTF-8">
     <meta name="Discover identical colors" content="discover the identical colors game" />
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <h1>Descoperă butoanele</h1>
-    <h2>de aceeași culoare!</h2>
+    <h1>Discover the circles</h1>
+    <h2>of the same color!</h2>
     <div class="envelope">
         <div class="table">
             <div class="field" id="1">
