Replace a button and a text

--- a/learn.html
+++ b/learn.html
@@ -14,17 +14,21 @@
 <body>
     <h1>Learn quickly!</h1>
     <h2 id="name"></h2>
-    <h3>Click on the buttons then read aloud what you see!</h3>
+    <h3>Click on the desired button and then ask your child 
+        to say what he sees inside that button!</h3>
     <div class="buttons">
         <div class="button-frame">
             <button id="button1">Letter<br><span id="letter"></span></button>
         </div>
-        <div class="button-frame">
-            <button id="button2">Number<br><span id="number"></span></button>
-        </div>
+
         <div class="button-frame">
             <button id="button3">Color<br></button>
         </div>
+
+        <div class="button-frame">
+            <button id="button2">Number<br><span id="number"></span></button>
+        </div>
+
     </div>
 
 </body>
